--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -220,7 +220,7 @@ p {
 }
 
 .main-nav li {
-    text-align: center;
+    text-align: left;
     margin: 15px auto;
 }
 
@@ -247,6 +247,7 @@ p {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 1em 2em;
     }
 
     .main-nav {
@@ -261,7 +262,8 @@ p {
     }
 
     .nav-links {
-        margin-left: 40px;
+        padding-right: 1rem;
+        padding-left: 1rem;
         color: #000000;
         font-weight: 700;
     }
@@ -853,4 +855,73 @@ table th {
 .margin-rl-auto {
     margin-right: auto;
     margin-left: auto;
+}
+
+/*dropdown sub menu*/
+.main-nav li.dropdown {
+    display: block;
+    float: left;
+    padding: 1rem;
+    position: relative;
+    text-decoration: none;
+    transition-duration: 0.5s;
+}
+
+.main-nav li > a {
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+}
+
+.main-nav li > a:hover,
+.main-nav li > a:focus-within,
+.main-nav li > a:focus {
+    color: #0AC97E;
+}
+
+.sub-menu > li {
+    margin: .6rem 0;
+}
+
+li:hover,
+li:focus-within {
+    cursor: pointer;
+}
+
+li:focus-within a {
+    outline: none;
+}
+
+ul li ul {
+    visibility: hidden;
+    opacity: 0;
+    min-width: 11rem;
+    position: absolute;
+    transition: all 0.5s ease;
+    margin-top: 1rem;
+    left: 0;
+    display: none;
+}
+
+ul li:hover > ul,
+ul li:focus-within > ul,
+ul li ul:hover,
+ul li ul:focus {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+}
+
+ul li ul li {
+    clear: both;
+    width: 100%;
+}
+
+.main-nav > li.dropdown ul {
+    list-style: none;
+    text-align: right;
+    background: white;
+    box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+    border-radius: 0  0 .3rem .3rem;
+    padding: 1rem;
 }
