--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -220,8 +220,20 @@ p {
 }
 
 .main-nav li {
-    text-align: left;
+    text-align: center;
     margin: 15px auto;
+}
+
+ul li ul {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    z-index: 100;
+    position: absolute;
+    transition: all 0.5s ease;
+    margin-top: 1rem;
+    left: 0;
+    display: none;
 }
 
 .logo > img {
@@ -259,6 +271,19 @@ p {
 
     .main-nav li {
         margin: 0;
+        text-align: left;
+    }
+
+    ul li ul {
+        visibility: hidden;
+        opacity: 0;
+        min-width: 11rem;
+        z-index: 100;
+        position: absolute;
+        transition: all 0.5s ease;
+        margin-top: 1rem;
+        left: 0;
+        display: none;
     }
 
     .nav-links {
@@ -860,7 +885,6 @@ table th {
 /*dropdown sub menu*/
 .main-nav li.dropdown {
     display: block;
-    float: left;
     padding: 1rem;
     position: relative;
     text-decoration: none;
@@ -890,17 +914,6 @@ li:focus-within {
 
 li:focus-within a {
     outline: none;
-}
-
-ul li ul {
-    visibility: hidden;
-    opacity: 0;
-    min-width: 11rem;
-    position: absolute;
-    transition: all 0.5s ease;
-    margin-top: 1rem;
-    left: 0;
-    display: none;
 }
 
 ul li:hover > ul,
