--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -11,6 +11,7 @@ body {
     font-family: 'Inconsolata', monospace;
     font-size:15px;
     width: 100%;
+    min-height: 100vh;
 }
 
 h1,
@@ -79,6 +80,10 @@ p {
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+}
+
+.flex-space {
+    justify-content: space-between;
 }
 
 .z-0 {
@@ -161,7 +166,7 @@ p {
     padding-top: 3rem;
     padding-bottom: .5em;
     min-height: 450px;
-    background: url('../img/bg/undraw_transfer_money_rywa.svg') no-repeat right center scroll, linear-gradient(#46c75e, #2F2E41);
+    background: linear-gradient(#46c75e, #164124);
     -webkit-background-size: 60%;
     -moz-background-size: 60%;
     -o-background-size: 60%;
@@ -206,6 +211,7 @@ p {
 
 .feature-image {
     max-width: 200px;
+    margin-bottom: 1.5rem;
 }
 
 .main-nav {
@@ -317,7 +323,8 @@ ul li ul {
     }
 
     .feature-image {
-        max-width: 350px;
+        max-width: 250px;
+        margin-bottom: 1.5rem;
     }
 
     .footer {
@@ -339,11 +346,11 @@ ul li ul {
         padding-top: 5rem;
         padding-bottom: 5rem;
         min-height: 600px;
-        background: url('../img/bg/undraw_transfer_money_rywa.svg')  no-repeat right center scroll, linear-gradient(#46c75e, #2F2E41);
-        -webkit-background-size: 60%;
-        -moz-background-size: 60%;
-        -o-background-size: 60%;
-        background-size: 60%;
+        background: url('../img/bg/undraw_transfer_money_rywa.svg')  no-repeat right center scroll, linear-gradient(#46c75e, #164124);
+        -webkit-background-size: 55%;
+        -moz-background-size: 55%;
+        -o-background-size: 55%;
+        background-size: 55%;
     }
 
     .button {
@@ -409,6 +416,10 @@ ul li ul {
     padding: .1em;
     font-weight: 700;
     text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+
+#header-text {
+    font-size: 230%;
 }
 
 
@@ -532,9 +543,9 @@ figure.figure .author h5 span {
 .md-stepper-horizontal .md-step .md-step-optional {
     font-size: 13px;
 }
-.md-stepper-horizontal .md-step.active .md-step-optional {
-    color: rgba(0,0,0,.54);
-}
+/*.md-stepper-horizontal .md-step.active .md-step-optional {*/
+/*color: rgba(0,0,0,.54);*/
+/*}*/
 .md-stepper-horizontal .md-step .md-step-bar-left,
 .md-stepper-horizontal .md-step .md-step-bar-right {
     position:absolute;
@@ -618,6 +629,7 @@ figure.figure .author h5 span {
 /*Forms*/
 input[type=text], input[type=password], input[type=number], input[type=email], select {
     width: 100%;
+    height: 2.5rem;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -694,11 +706,11 @@ span.forgot-password {
 }
 
 #login-section-bg {
-    background: url('../img/bg/undraw_fingerprint_swrc.svg') repeat-x center center fixed;
-    -webkit-background-size: 45%;
-    -moz-background-size: 45%;
-    -o-background-size: 45%;
-    background-size: 45%;
+    background: url('../img/bg/undraw_fingerprint_swrc.svg') no-repeat center center fixed;
+    -webkit-background-size: 85%;
+    -moz-background-size: 85%;
+    -o-background-size: 85%;
+    background-size: 85%;
 }
 
 #forgot-password-section-bg {
